# fastlio_localization

./: .gitignore  CMakeLists.txt  README.md  build.sh  package.xml  package_ROS1.xml  package_ROS2.xml  文档.md
Log/: plot_state.py
config/: UrbanLoco_CA.yaml  UrbanLoco_HK.yaml  avia.yaml  bbs3d.yaml  horizon.yaml  localization_dev.yaml  mapping_dev.yaml  mid360.yaml  nclt.yaml  ouster64.yaml  ros2_param.yaml  velodyne.yaml
include/: esekf.hpp
include/IKFoM_toolkit/esekfom/: esekfom.hpp
include/IKFoM_toolkit/mtk/types/: vect.hpp
include/global_localization/: EnuCoordinate.h  EnuCoordinate.hpp  InitCoordinate.cpp  UtmCoordinate.h  bbs3d.h  bnb3d.h
include/global_localization/scancontext/: Scancontext.cpp  Scancontext.h
include/ikd-Tree/: ikd_Tree.cpp  ikd_Tree.h
include/system/: DataDef.h  FactorGraphOptimization.hpp  FastlioOdometry.hpp  GnssProcessor.hpp  Header.h  ImuProcessor.cpp  ImuProcessor.h  LidarProcessor.hpp  LoopClosure.hpp  Parameters.h  ParametersRos1.h  ParametersRos2.h  Relocalization.hpp  System.hpp  use-ikfom.hpp
include/system/frontend/: FastlioOdometry.hpp  ImuProcessor.cpp  ImuProcessor.h  LidarProcessor.hpp  PointlioOdometry.hpp  use-ikfom.cpp  use-ikfom.h  use-ikfom.hpp
include/utility/: EigenMath.h  FileOperation.h  Header.h  LogTool.h  MathTools.h  Parameters.h  Pcd2Pgm.hpp  ProgressBar.h  SO3_Math.h  Timer.h  color.h  evo_tool.h  manually_correct_loop_closure.h
launch/: gdb_debug_example.launch  run.launch  run_launch.py  run_service.launch
localization_msg/: CMakeLists.txt  package.xml
localization_msg/msg/: vehicle_pose.msg
rviz_cfg/: localization.rviz  localization_ros2.rviz
src/: ros1_main.cpp  ros2_main.cpp
test/: read_rosbag_test.cpp  read_rosbag_test_lcalization.cpp  read_rosbag_test_relcalization.cpp  test_config.yaml
